A bunch of (mostly IE-related) fixes
Please note IE fails to understand "!important" in currentStyle for
custom properties, but we may fail at this in some case too, so the
rule is: no !important please…

--- a/s/css-regions.css
+++ b/s/css-regions.css
@@ -3,9 +3,8 @@
 /*********************************************************/
 
 /* hide content that shouldn't be displayed */
-cssregion, 
-[data-css-region] > *, 
-[data-css-regions-fragment-source] {
+cssregion,  
+[data-css-regions-fragment-source]:not([data-css-regions-cloning]) {
     display: none !important;
 }
 
